Update English to British/international spelling (colour, licence, organised, etc.)

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -18,7 +18,7 @@
     "privacy": "Datenschutz",
     "accessibility": "Barrierefreiheit",
     "imprint": "Impressum",
-    "license": "Lizenz",
+    "licence": "Lizenz",
     "licenseText": "CC BY-SA 4.0 – Frei zu teilen und anzupassen mit Namensnennung.",
     "copyright": "2025 Aperto Bibel-Projekt"
   },
