--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,7 +15,7 @@
     "privacy": "Privacy Policy",
     "accessibility": "Accessibility",
     "imprint": "Imprint",
-    "license": "Released under CC BY-SA 4.0",
+    "licence": "Released under CC BY-SA 4.0",
     "copyright": "Aperto Bible Project"
   },
   "home": {
@@ -67,7 +67,7 @@
       "intro": "Our approach balances accessibility, scholarly depth, and ecumenical breadth:",
       "no_insider": "<strong>No insider vocabulary:</strong> Everyday words that don't require religious background.",
       "literary": "<strong>Literary quality:</strong> Written to match contemporary fiction standards.",
-      "footnotes": "<strong>Honest footnotes:</strong> Cultural context, Greek word studies, multiple interpretive options, and acknowledgment of difficult passages.",
+      "footnotes": "<strong>Honest footnotes:</strong> Cultural context, Greek word studies, multiple interpretive options, and acknowledgement of difficult passages.",
       "ecumenical": "<strong>Ecumenical foundations:</strong> Catholic, Orthodox, Protestant, and Pentecostal scholarship represented fairly—not flattened into one tradition.",
       "diverse": "<strong>Diverse scholarship:</strong> Drawing on feminist, liberationist, and historical-critical readings alongside traditional commentaries.",
       "multimedia": "<strong>Multimedia first:</strong> Audio Bible, podcasts, songs, and contemplative practices—meeting people where they are."
@@ -81,8 +81,8 @@
       "text": "Currently available in English, German, French, Polish, and Turkish. Each translation is culturally adapted for its context—not just linguistically translated but reimagined for how people in Berlin, Paris, Warsaw, or Istanbul might encounter these texts."
     },
     "license": {
-      "title": "License",
-      "text": "Aperto is released under <strong>CC BY-SA 4.0</strong>. Everything—translation, exegesis, songs, podcasts—is free to share, adapt, and build upon. The only requirement: share your adaptations under the same open license."
+      "title": "Licence",
+      "text": "Aperto is released under <strong>CC BY-SA 4.0</strong>. Everything—translation, exegesis, songs, podcasts—is free to share, adapt, and build upon. The only requirement: share your adaptations under the same open licence."
     },
     "get_involved": {
       "title": "Get Involved",
@@ -107,17 +107,17 @@
       "p1": "When Jesus said this, he was responding to religious leaders who wanted to silence the proclamation of who he was. His point: if the expected voices fall silent, God will use unexpected means.",
       "p2": "We don't claim AI is the \"stones crying out\" in any literal sense. But we do believe that when traditional gatekeepers can't or won't make Scripture accessible to everyone, God's message will find other ways through.",
       "p3": "There's a certain poetry to it: silicon chips are, after all, rocks we taught to think. Sand refined, etched with circuits, trained on humanity's collected wisdom. If God can speak through a burning bush, a donkey, or bread and wine—perhaps silicon isn't so strange a medium.",
-      "p4": "The printing press was once viewed with suspicion by religious authorities. So was translating the Bible into vernacular languages. Every technological shift that democratized access to Scripture was initially resisted—and eventually embraced.",
+      "p4": "The printing press was once viewed with suspicion by religious authorities. So was translating the Bible into vernacular languages. Every technological shift that democratised access to Scripture was initially resisted—and eventually embraced.",
       "p5": "AI is a tool. Like any tool, it can be used well or poorly. We're trying to use it well."
     },
     "how_it_works": {
       "title": "How Our Process Works",
       "step1_title": "Deep Exegesis",
-      "step1_text": "We start with comprehensive scholarly research: Greek text analysis, major commentaries (Anchor Bible, Hermeneia, Baker, N.T. Wright), lexicons (BDAG, Louw-Nida), cultural studies, and patristic sources. AI helps us synthesize vast amounts of scholarship that no single human could process.",
+      "step1_text": "We start with comprehensive scholarly research: Greek text analysis, major commentaries (Anchor Bible, Hermeneia, Baker, N.T. Wright), lexicons (BDAG, Louw-Nida), cultural studies, and patristic sources. AI helps us synthesise vast amounts of scholarship that no single human could process.",
       "step2_title": "Translation Philosophy",
-      "step2_text": "We aim for a translation that is accessible to unchurched readers without losing theological depth. No religious jargon. Contemporary language that reads like modern literary prose. Every verse is filtered through this lens.",
+      "step2_text": "We aim for a translation that is accessible to unchurched readers without losing theological depth. No religious jargon. Contemporary language that reads like modern literary prose. Every verse is considered through this lens.",
       "step3_title": "Footnotes as Bridge",
-      "step3_text": "We don't hide complexity—we make it accessible. Footnotes explain cultural context, Greek word choices, scholarly debates, and \"hard to believe\" passages that deserve honest acknowledgment rather than apologetic smoothing.",
+      "step3_text": "We don't hide complexity—we make it accessible. Footnotes explain cultural context, Greek word choices, scholarly debates, and \"hard to believe\" passages that deserve honest acknowledgement rather than apologetic smoothing.",
       "step4_title": "Multimedia First",
       "step4_text": "Media is the expected format now. Long-form reading has become the exception, not the norm—people listen to podcasts on their commute, discover ideas through songs, and engage with content in short bursts throughout the day. Audio Bible readings, discussion podcasts, original songs, and contemplative practices aren't supplements to the text. They're primary ways people will encounter it.",
       "step5_title": "Human Review",
@@ -130,7 +130,7 @@
       "list": [
         "Are curious about the Bible but feel alienated by church culture",
         "Read contemporary fiction and want Scripture that reads with similar quality",
-        "Have left organized religion but haven't lost interest in meaning",
+        "Have left organised religion but haven't lost interest in meaning",
         "Come from cultural contexts where Christianity feels foreign or colonial",
         "Prefer podcasts and playlists to traditional Bible study",
         "Want intellectual honesty about difficult passages, not apologetic spin"
@@ -140,19 +140,19 @@
     "freely": {
       "title": "Freely Received, Freely Give",
       "p1": "There are excellent modern Bible translations. Some are even accessible and well-written. But most are locked behind licensing restrictions that limit how they can be used, shared, adapted, and built upon. We believe Scripture should be as free as the message it carries.",
-      "p2": "Reading patterns are changing in the digital age. Deep study is becoming rarer while consumptive engagement—podcasts, short-form content, audio—is on the rise. A Bible engagement project for a new generation needs to take this seriously. We want to experiment and explore what's possible with today's \"printing presses\": AI, multimedia, open-source collaboration.",
+      "p2": "Reading patterns are changing in the digital age. Deep study is becoming rarer whilst consumptive engagement—podcasts, short-form content, audio—is on the rise. A Bible engagement project for a new generation needs to take this seriously. We want to experiment and explore what's possible with today's \"printing presses\": AI, multimedia, open-source collaboration.",
       "p3": "This isn't about replacing traditional Bible study. It's about creating multiple entry points—songs that stick in your head, podcasts for your commute, practices you can do in five minutes. Some will go deeper. Many won't. Both are okay.",
-      "p4": "CC BY-SA 4.0 means anyone can take what we create and build on it. Remix the songs. Adapt the translation for your dialect. Create an app, a curriculum, a theatrical production. The only requirement: share your adaptations under the same open license."
+      "p4": "CC BY-SA 4.0 means anyone can take what we create and build on it. Remix the songs. Adapt the translation for your dialect. Create an app, a curriculum, a theatrical production. The only requirement: share your adaptations under the same open licence."
     },
     "open": {
       "title": "Radically Open",
       "p1": "Aperto is released under CC BY-SA 4.0. Everything—the translation, the exegesis, the songs, the process documentation—is free to use, adapt, and build upon.",
-      "p2": "Why? Because Scripture belongs to everyone. The early church didn't copyright their manuscripts. The Reformers didn't paywall their translations. We believe the message of the Bible should be as accessible as possible.",
+      "p2": "Why? Because Scripture belongs to everyone. The early church didn't copyright their manuscripts. The Reformers didn't put their translations behind paywalls. We believe the message of the Bible should be as accessible as possible.",
       "p3": "If you want to take our German translation and adapt it for Austrian dialect—go ahead. If you want to use our exegesis to create a children's version—please do. If you want to remix our songs for your local context—that's what they're for."
     },
     "limitations": {
       "title": "What We Get Wrong",
-      "p1": "We're not claiming this is perfect. AI makes mistakes. So do humans. Every translation involves interpretation, and every interpretation can be contested.",
+      "p1": "We're not claiming this is perfect. AI makes mistakes. So do humans. Every translation involves interpretation, and every interpretation can be challenged.",
       "p2": "Some things AI still struggles with:",
       "list": [
         "Nuanced theological distinctions that require deep domain expertise",
@@ -160,7 +160,7 @@
         "Poetic rhythm and wordplay that require native speaker intuition",
         "Knowing when to be literal vs. dynamic in specific contexts"
       ],
-      "p3": "We try to compensate for these limitations through human review, community feedback, and ongoing revision. But we'd rather ship something imperfect and useful than wait for something perfect that never arrives."
+      "p3": "We try to compensate for these limitations through human review, community feedback, and ongoing revision. But we'd rather publish something imperfect and useful than wait for something perfect that never arrives."
     },
     "join": {
       "title": "Join the Conversation",
@@ -196,14 +196,14 @@
       "intro": "The Aperto Bible Project is committed to making our content accessible to everyone, including people with disabilities.",
       "standards": {
         "title": "Accessibility Standards",
-        "text": "We aim to conform to WCAG 2.1 Level AA guidelines. Our website is designed with semantic HTML, keyboard navigation support, and appropriate color contrast."
+        "text": "We aim to conform to WCAG 2.1 Level AA guidelines. Our website is designed with semantic HTML, keyboard navigation support, and appropriate colour contrast."
       },
       "features": {
         "title": "Accessibility Features",
         "list": [
           "Semantic HTML structure for screen reader compatibility",
           "Keyboard navigation support throughout the site",
-          "Sufficient color contrast for readability",
+          "Sufficient colour contrast for readability",
           "Responsive design that works across devices",
           "Text alternatives for non-text content",
           "Clear, readable typography"
@@ -233,8 +233,8 @@
         "text": "The content of this website is provided for informational purposes. We make every effort to ensure accuracy but cannot guarantee that all information is complete or current. External links are provided for convenience; we are not responsible for the content of linked sites."
       },
       "license": {
-        "title": "Content License",
-        "text": "Unless otherwise noted, all content on this website is released under the Creative Commons Attribution-ShareAlike 4.0 International License (CC BY-SA 4.0)."
+        "title": "Content Licence",
+        "text": "Unless otherwise noted, all content on this website is released under the Creative Commons Attribution-ShareAlike 4.0 International Licence (CC BY-SA 4.0)."
       }
     }
   }
