--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -15,7 +15,7 @@
     "privacy": "Politique de confidentialité",
     "accessibility": "Accessibilité",
     "imprint": "Mentions légales",
-    "license": "Publié sous CC BY-SA 4.0",
+    "licence": "Publié sous CC BY-SA 4.0",
     "copyright": "Projet Bible Aperto"
   },
   "home": {
