--- a/src/i18n/pl.json
+++ b/src/i18n/pl.json
@@ -18,7 +18,7 @@
     "privacy": "Polityka prywatności",
     "accessibility": "Dostępność",
     "imprint": "Impressum",
-    "license": "Licencja",
+    "licence": "Licencja",
     "licenseText": "CC BY-SA 4.0 – Wolne do udostępniania i adaptacji z uznaniem autorstwa.",
     "copyright": "2025 Projekt Biblia Aperto"
   },
