--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -15,7 +15,7 @@
     "privacy": "Gizlilik Politikası",
     "accessibility": "Erişilebilirlik",
     "imprint": "Künye",
-    "license": "CC BY-SA 4.0 altında yayınlandı",
+    "licence": "CC BY-SA 4.0 altında yayınlandı",
     "copyright": "Aperto İncil Projesi"
   },
   "home": {
